--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 quickdraw_dataset/
 quickdraw_dataset_png/
 quickdraw_dataset_testing/
+quickdraw_dataset_testing_png/
+quickdraw_dataset_pth/
 runs/
 __pycache__/
 /canvas.png
